# gust

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  release.yml
apps/desktop/: index.html  package.json  vite.config.ts
apps/desktop/src/: App.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src/components/scene/: CityScene.tsx  DroneModel.tsx  DroneTrail.tsx  EnemyDroneModel.tsx  PostEffects.tsx  ProceduralCity.tsx  SkyAndEnvironment.tsx  SnowParticles.tsx  WaypointMarkers.tsx  (+1 more)
apps/desktop/src/hooks/: useEnemyDrones.ts  useKeyboardControls.ts  useSimulation.ts
apps/desktop/src/lib/: cityGenerator.ts  store.ts  tauri.ts  theme.ts  types.ts
crates/gust-app-core/: Cargo.toml
crates/gust-app-core/scenarios/: canyon_recovery.json  city_flyover.json  city_flyover_cloudy.json  city_flyover_night.json  city_flyover_sunny.json  faulted_sensor_run.json  turbulence_lab.json
crates/gust-app-core/src/: controllers.rs  evaluation.rs  lib.rs  scenarios.rs  service.rs  world.rs
crates/gust-sim-bridge/: Cargo.toml  build.rs
crates/gust-sim-bridge/src/: lib.rs
crates/gust-types/: Cargo.toml
crates/gust-types/src/: lib.rs
docs/: architecture.md  development-plan.md
native/sim_core/: CMakeLists.txt
native/sim_core/include/gust/: sim_c_api.h
native/sim_core/src/: sim.cpp  sim.hpp  sim_c_api.cpp
(+6 files in other folders)
