[workspace]
members = [
  "apps/desktop/src-tauri",
  "crates/gust-app-core",
  "crates/gust-sim-bridge",
  "crates/gust-types",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
cmake = "0.1"
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.10", features = [] }
tauri-build = { version = "2.5", features = [] }
thiserror = "2"

