[package]
name = "gust-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true

[build-dependencies]
tauri-build.workspace = true

[dependencies]
gust-app-core = { path = "../../../crates/gust-app-core" }
gust-types = { path = "../../../crates/gust-types" }
tauri.workspace = true

[[bin]]
name = "gust-desktop"
path = "src/main.rs"

